--- a/ejemplo3/result/package.json
+++ b/ejemplo3/result/package.json
@@ -1,25 +1,22 @@
 {
-  "name": "result",
+  "name": "TestNuxt",
   "version": "1.0.0",
-  "description": "Nuxt.js project",
-  "author": "zzleomar <dmy.leomar@gmail.com>",
+  "description": "My striking Nuxt.js project",
+  "author": "zzleomar",
   "private": true,
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "cross-env": "^5.2.0",
+    "nuxt": "^2.0.0",
+    "nuxt-buefy": "^0.2.1",
+    "@nuxtjs/axios": "^5.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^4.19.1",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "nodemon": "^1.11.0"
   }
 }
